--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/mainActivity">
+    app:startDestination="@id/firstFragment">
 
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="jp.chau2chaun2.honkot.samplejetpackproject2020.MainActivity"
-        android:label="main_activity"
+    <fragment
+        android:id="@+id/firstFragment"
+        android:name="jp.chau2chaun2.honkot.samplejetpackproject2020.ui.main.FirstFragment"
+        android:label="FirstFragment"
         tools:layout="@layout/fragment_1st">
         <action
-            android:id="@+id/action_mainActivity_to_secondFragment"
+            android:id="@+id/action_firstFragment_to_secondFragment"
             app:destination="@id/secondFragment" />
-    </activity>
+    </fragment>
     <fragment
         android:id="@+id/secondFragment"
         android:name="jp.chau2chaun2.honkot.samplejetpackproject2020.ui.main.SecondFragment"
