--- a/app/src/main/res/layout/fragment_1st.xml
+++ b/app/src/main/res/layout/fragment_1st.xml
@@ -16,6 +16,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:hint="type args for next fragment"
+        app:layout_constraintTop_toBottomOf="@+id/message"
+        />
+
     <Button
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
