--- a/app/src/main/res/layout/fragment_5th.xml
+++ b/app/src/main/res/layout/fragment_5th.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="@string/general_next"
+        android:text="@string/general_back_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
