--- a/app/src/main/res/layout/fragment_2nd.xml
+++ b/app/src/main/res/layout/fragment_2nd.xml
@@ -38,6 +38,17 @@
         app:layout_constraintTop_toBottomOf="@+id/countUpTextOnFragment"
         tools:text="ViewModel count: 0" />
 
+    <TextView
+        android:id="@+id/countUpTextOnViewModel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/second_fragment_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countUpTextOnViewModel"
+        tools:text="ViewModel count: 0" />
+
     <Button
         android:id="@+id/countUpButton"
         android:layout_width="wrap_content"
