--- a/app/src/main/res/layout/fragment_1st.xml
+++ b/app/src/main/res/layout/fragment_1st.xml
@@ -27,6 +27,16 @@
         />
 
     <Button
+        android:id="@+id/listButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/general_list"
+        app:layout_constraintBottom_toTopOf="@+id/nextButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
