--- a/app/src/main/res/layout/item_groupie_list.xml
+++ b/app/src/main/res/layout/item_groupie_list.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="jp.chau2chaun2.honkot.samplejetpackproject2020.vm.RowGroupieViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -14,6 +20,7 @@
             android:layout_margin="16dp"
             android:textColor="@android:color/black"
             android:textSize="12sp"
+            android:text="@{viewModel.headText}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -26,6 +33,7 @@
             android:layout_margin="16dp"
             android:textColor="@android:color/black"
             android:textSize="12sp"
+            android:text="@{viewModel.tailText}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
